cmake_minimum_required(VERSION 3.16)
project(AdventOfCode2021)

set (CMAKE_CXX_STANDARD 20)

add_executable(day1 src/day1.cpp)
add_executable(day2 src/day2.cpp)
add_executable(day3 src/day3.cpp)
add_executable(day4 src/day4.cpp)
add_executable(day5 src/day5.cpp)
add_executable(day6 src/day6.cpp)
add_executable(day7 src/day7.cpp)
add_executable(day8 src/day8.cpp)
add_executable(day9 src/day9.cpp)
add_executable(day10 src/day10.cpp)
add_executable(day11 src/day11.cpp)
add_executable(day12 src/day12.cpp)
add_executable(day13 src/day13.cpp)
add_executable(day14 src/day14.cpp)
add_executable(day15 src/day15.cpp)
add_executable(day16 src/day16.cpp)

target_compile_options(day14 PUBLIC -fsanitize=undefined)
target_link_options(day14 PUBLIC -fsanitize=undefined)
